# IGAR-BOT

./: .gitignore  Cargo.toml  doc  docker-compose.yml  dockerfile  readme.md  readme.txt
bot/: Cargo.toml  dockerfile
bot/src/: main.rs  structures.rs
src/: main.rs
