[package]
name = "my-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 tokio = { version = "0.2", features = ["macros"] }
          serenity = { default-features = false, features = ["client", "gateway", "model", 
          "rustls_backend"], version = "0.9.0-rc.2"}
reqwest = "0.11"
serde_json = "1.0"
